# Diffusion-pipeline

./: README.md  config.toml  pyproject.toml
diffusion/: main.py  pyproject.toml
diffusion/modules/: sd_hijack.py
src/: app.py
src/modules/api/: models.py
