[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["ThanThoai <darkrai17071998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.1"
torchvision = "^0.14.1"
blendmodes = "2022"
transformers = "4.25.1"
accelerate = "0.12.0"
gradio = "3.16.2"
safetensors = "0.2.7"
pytorch-lightning = "1.7.6"
numpy = "1.23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
